# libtorch_grpc_serving

./: .editorconfig  .gitignore  .style.yapf  CMakeLists.txt  Dockerfile  README.md  get_resnet_libtorch_save.py
docker/: Dockerfile  README.md  libtorch_cpu_Dockerfile
protos/: example.grpc.pb.cc  example.grpc.pb.h  example.pb.cc  example.pb.h  example.proto
python/: .gitignore  resnet_client.py
src/: CMakeLists.txt  resnet.cc  resnet.h  resnet_server.cc
